typescript/checker/tests/conformance/es6/destructuring/iterableArrayPattern1.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            226,
        ),
        hi: BytePos(
            240,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/destructuring/iterableArrayPattern1.ts:15:18
   |
15 | var [a, b] = new SymbolIterator;
   |                  ^^^^^^^^^^^^^^

